--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   ],
   "dependencies" : {
     "angular"                           : "*",
+    "bootstrap"                         : "*",
     "eonasdan-bootstrap-datetimepicker" : ">=4.0.0",
     "jquery"                            : "*"
   },
